working implementation, combined text interface