@@ -1,6 +1,7 @@
 package arrayImplementation;
 
-import java.util.LinkedList; 
+import java.util.Collection;
+import java.util.LinkedList;
 import java.util.List;
 
 import dijkstra.AbstractVertexQueue;
@@ -8,44 +9,62 @@ import dijkstra.VertexData;
 import startercode.Vertex;
 
 public class VertexBucket extends AbstractVertexQueue{
+ 
+	private LinkedList<Vertex>[] myListArr; // array of buckets (each index corresponds to the cost of the Vertices contained in each)
+	private int numVrt;                     // the number of Vertices contained
+	private int arrIndex;                   // the index of which to analyze unknown Vertices
 
-	private List<Vertex>[] listArray;
-	private List<Vertex> vertices = new LinkedList<Vertex>();
-	
-	public void addVertex(Vertex theVertex) {
-		vertices.add(theVertex);
-	}
-	
-	public void removeVertex(Vertex theVertex) {
-		vertices.remove(theVertex);
+	public VertexBucket(int arrSize){
+		myListArr = new LinkedList[arrSize + 1];
+		for(int i = 0; i < myListArr.length; i++){
+			myListArr[i] = new LinkedList<>();
+		}
+		arrIndex = 0;
 	}
 
-	public boolean contains(Vertex theVertex) {
-		if (vertices.contains(theVertex)) return true;
-		return false;
-	}
 
 	@Override
 	public void decrease(Vertex v, VertexData newData, int dist) {
-		// TODO Auto-generated method stub
-		
+		VertexData vData = (VertexData)v.getData();
+		int vIndex = vData.getIndexInQueue();
+		List<Vertex> bucket = myListArr[vIndex];
+		assert vIndex < dist;
+		for (int i = 0 ; i < bucket.size(); i++){
+			if ((bucket.get(i) == v)) {//Comparison of mem addresses is adequate
+				v.setData(newData);
+				newData.setIndexInQueue(dist);
+				newData.setDistFromSource(dist);
+				myListArr[dist].add(bucket.remove(i));//Add the vertex to the new bucket
+				break;
+			}
+		}
 	}
 
 	@Override
 	public Vertex deleteMin() {
-		return vertices.remove(0);
+		Vertex aVertex = null;
+		while(myListArr[arrIndex].isEmpty() && arrIndex < myListArr.length){
+			arrIndex++;
+		}
+
+		aVertex = myListArr[arrIndex].removeFirst();
+		return aVertex;
 	}
 
 	@Override
 	public int insert(Vertex v, int vDist) {
-		// TODO Auto-generated method stub
-		return 0;
+		int location = Math.min(vDist, myListArr.length-1);
+		VertexData vData = (VertexData) v.getData();
+		vData.setDistFromSource(location);
+		vData.setIndexInQueue(location);
+		myListArr[location].add(v);
+		numVrt++;
+		return location;
 	}
 
 	@Override
 	public int getVertexCount() {
-		// TODO Auto-generated method stub
-		return 0;
+		return numVrt;
 	}
 	
 }
